Update chat reader

--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ h2 {
 .nissmallimagebutton {
     min-width: 21px;
     min-height: 21px;
-    background: url("assets/icons/imagebuttonbackground.png");
+    background: url("/assets/icons/imagebuttonbackground.png");
 }
 
 .nissmallimagebutton.disabled {
@@ -106,7 +106,7 @@ h2 {
 }
 
 .nissmallimagebutton.active {
-    background: url("assets/icons/imagebuttonbackground.png");
+    background: url("/assets/icons/imagebuttonbackground.png");
     background-position-x: 21px;
 }
 
@@ -313,7 +313,6 @@ h2 {
 }
 
 .marktele {
-    cursor: default;
     transform-origin: center;
     position: absolute;
     color: #fff;
@@ -447,7 +446,7 @@ video {
 }
 
 .exit-button {
-    background-image: url("assets/icons/exit.png");
+    background-image: url("/assets/icons/exit.png");
     height: 22px;
     width: 22px;
 }
@@ -705,7 +704,7 @@ video {
 }
 
 .ctr-scantreeedit-node.active .ctr-scantreeedit-youarehere {
-    background-image: url("assets/icons/youarehere.png");
+    background-image: url("/assets/icons/youarehere.png");
     background-size: contain;
 }
 
@@ -740,7 +739,7 @@ video {
     width: 12px;
     height: 11px;
     margin: auto 2px;
-    background-image: url("assets/icons/issue-weak-warning.png");
+    background-image: url("/assets/icons/issue-weak-warning.png");
 }
 
 .ctr-step-issue-icon-1 {
@@ -748,7 +747,7 @@ video {
     width: 12px;
     height: 11px;
     margin: auto 2px;
-    background-image: url("assets/icons/issue-warning.png");
+    background-image: url("/assets/icons/issue-warning.png");
 }
 
 .ctr-step-issue-icon-0 {
@@ -756,7 +755,7 @@ video {
     width: 12px;
     height: 12px;
     margin: auto 2px;
-    background-image: url("assets/icons/issue-error.png");
+    background-image: url("/assets/icons/issue-error.png");
 }
 
 .ctr-cooldown-overlay-shadow {
@@ -956,6 +955,7 @@ video {
     column-gap: 5px;
     row-gap: 2px;
     grid-template-columns: [name] min-content [content] minmax(0, 1fr);
+    width: 100%;
 }
 
 .nisl-property-header {
@@ -995,6 +995,11 @@ video {
 .nisl-property-content {
     grid-column: 2;
     grid-row: auto;
+}
+
+.nisl-property-content > .ctr-lightbutton, .ctr-lightbutton.ctr-lightbutton-slim {
+    margin: 0;
+    font-size: 0.9em;
 }
 
 .nisl-property-content > * {
@@ -1078,10 +1083,15 @@ video {
     color: #0d65e7;
 }
 
+.nisl-textlink:hover {
+    color: var(--bs-link-hover-color);
+}
+
 /* Context menu */
 
 .nisl-context-menu {
     border: 1px solid white;
+    border-radius: 2px;
     outline: 1px solid rgb(35, 35, 35);
     background: rgb(10, 29, 38);
     color: rgb(198, 184, 139);
@@ -1309,6 +1319,7 @@ video {
     display: inline-block;
     cursor: pointer;
     font-size: 1.3em;
+    margin: -4px 0;
 }
 
 /* Shortcut Edit */
@@ -1448,18 +1459,17 @@ input[type=checkbox] + span {
     font-style: italic;
 }
 
+/* Theorycrafter Method Widget */
+
 .ctr-method-widget {
-    background-color: #1b364d;
-    border: 1px solid white;
+    background-color: #102c3a;
+    border: 1px solid gray;
+    border-radius: 2px;
+    margin: 5px 0;
 }
 
-.ctr-method-widget-header {
-    border-top: 1px solid grey;
-    cursor: pointer;
-}
-
-.ctr-method-widget-body {
-    border-top: 1px dashed grey;
+.ctr-method-widget:hover {
+    background-color: #0d3548;
 }
 
 .ctr-method-widget-pack-header {
@@ -1473,9 +1483,14 @@ input[type=checkbox] + span {
     border-radius: 20px;
 }
 
+.ctr-lightbutton.ctr-lightbutton-default {
+    border-radius: 3px;
+}
+
 .ctr-lightbutton {
     color: #aed0e0;
-    background-image: linear-gradient(#2e4d63, #1a3846, #1c3143);
+    background-image: linear-gradient(180deg, rgba(52, 84, 98, 1) 0%, rgba(13, 45, 61, 1) 30%, rgba(13, 45, 61, 1) 100%);
+    margin: 2px;
     border-top: 1px solid #959977;
     border-bottom: 1px solid #3e4270;
     border-left: 1px solid #5a5e72;
@@ -1494,27 +1509,24 @@ input[type=checkbox] + span {
 }
 
 .ctr-lightbutton.enabled:hover {
-    filter: brightness(120%);
-    background-image: linear-gradient(#3e647e, #1e3f4f, #1d3346);
+    color: white;
+    background-image: linear-gradient(180deg, rgba(65, 104, 122, 1) 0%, rgba(20, 67, 91, 1) 35%, rgba(20, 67, 91, 1) 100%);;
     text-shadow: black 1px 1px;
-    border-top: 1px solid #959977;
-    border-bottom: 1px solid #3e4270;
-    border-left: 1px solid #5a5e72;
-    border-right: 1px solid #5a5e72;
 }
 
 
 /* Pack widget*/
 
 .ctr-pack-widget {
-    cursor: pointer;
-    background-color: #1b364d;
-    border: 1px solid white;
-    margin-bottom: 5px;
+    background-color: #102c3a;
+    border: 1px solid gray;
+    border-radius: 5px;
+    margin: 5px 0;
+    padding: 2px;
 }
 
 .ctr-pack-widget:hover {
-    filter: brightness(1.25);
+    background-color: #0d3548;
 }
 
 .ctr-pack-widget.inactive {
@@ -1527,20 +1539,39 @@ input[type=checkbox] + span {
 .ctr-pack-widget-header {
     font-weight: bold;
     text-align: center;
+    border-bottom: 1px solid #41555f;
 }
 
 .ctr-pack-widget-body {
-    border-top: 1px dashed grey;
+    border-top: 1px solid black;
 }
 
-.ctr-pack-widget-pack-header > span {
-    font-style: italic;
+.ctr-pack-widget-header-type {
+    font-size: 0.7rem;
+    border: 1px solid black;
+    border-radius: 3px;
+    background-color: brown;
+    padding: 1px 3px;
+    position: relative;
+    top: -2px;
 }
 
+.ctr-pack-widget-header-type-default {
+    background-color: brown;
+}
+
+.ctr-pack-widget-header-type-local {
+    background-color: green;
+}
+
+.ctr-pack-widget-header-type-imported {
+    background-color: #05649d;
+}
 
 .nisl-modal {
     border-radius: 10px;
     border: 2px solid rgb(43, 58, 67);
+    max-height: calc(100vh - 2 * var(--bs-modal-margin));
 }
 
 .nisl-modal-footer {
@@ -1569,7 +1600,7 @@ input[type=checkbox] + span {
 }
 
 .nisl-modal-exit {
-    background-image: url("assets/icons/exit.png");
+    background-image: url("/assets/icons/exit.png");
     height: 22px;
     width: 22px;
     cursor: pointer;
@@ -1699,7 +1730,7 @@ input[type=checkbox] + span {
 
 .nisl-checkbox {
     display: grid;
-    grid-template-columns: 1em auto auto;
+    grid-template-columns: 1em auto;
     gap: 0.5em;
 }
 
@@ -1728,11 +1759,11 @@ input[type=checkbox] + span {
 }
 
 .nisl-checkbox-box.checked > .nisl-checkbox-checkmark {
-    background-image: url("assets/nis/checkmark.png");
+    background-image: url("/assets/nis/checkmark.png");
 }
 
 .nisl-checkbox-box.nisl-checkbox-radio.checked > .nisl-checkbox-checkmark {
-    background-image: url("assets/nis/radiocheck.png");
+    background-image: url("/assets/nis/radiocheck.png");
 }
 
 .nisl-checkbox-box:not(.checked) > .nisl-checkbox-checkmark {
@@ -1745,6 +1776,7 @@ input[type=checkbox] + span {
 
 .nisl-checkbox-disabled {
     color: grey;
+    cursor: not-allowed;
 }
 
 .nisl-checkbox-disabled > .nisl-checkbox-box {
@@ -1763,6 +1795,10 @@ input[type=checkbox] + span {
 
 .ctr-filtered-clue-result {
     border: 1px solid grey;
+    padding: 0 2px;
+    border-radius: 2px;
+    background-color: #102c3a;
+
 }
 
 .ctr-filtered-clue-result:not(:last-child) {
@@ -1947,6 +1983,7 @@ input[type=checkbox] + span {
     padding: 0;
     width: 20px;
     height: 20px;
+    margin: 0;
 }
 
 .ctr-neosolving-favourite-dropdown {
@@ -2104,6 +2141,7 @@ input[type=checkbox] + span {
 
 .ctr-menurow > * {
     flex-grow: 1;
+    margin: 0;
 }
 
 .ctr-menurow > *:first-child {
@@ -2118,10 +2156,19 @@ input[type=checkbox] + span {
     outline: none;
 }
 
+.leaflet-grab {
+    cursor: default;
+}
+
+.leaflet-drag-target {
+    cursor: move !important;
+}
+
 /* Settings */
 
 .ctr-section-control {
     display: flex;
+    width: 100%;
 }
 
 .ctr-section-control-content {
@@ -2137,9 +2184,11 @@ input[type=checkbox] + span {
 }
 
 .ctr-section-control-menu {
+    overflow-y: auto;
     flex-basis: 40%;
     padding: 10px;
     background-color: #00000040;
+    max-width: 200px;
 }
 
 .ctr-section-control-menu-header {
@@ -2218,16 +2267,19 @@ input[type=checkbox] + span {
     filter: grayscale(1)
 }
 
+.modal-dialog {
+    max-height: 100%;
+}
+
+.modal-dialog > .nisl-modal {
+
+}
+
 .ctr-modal-fullscreen {
     --bs-modal-margin: 0.25rem;
     max-width: revert;
     width: calc(100% - 2 * var(--bs-modal-margin));
     height: calc(100% - 2 * var(--bs-modal-margin));
-}
-
-.ctr-modal-fullscreen > .nisl-modal {
-    min-height: 100%;
-    max-height: 100%;
 }
 
 .ctr-modal-fullscreen > .nisl-modal {
@@ -2413,4 +2465,17 @@ input[type=checkbox] + span {
 .ctr-striked {
     text-decoration: line-through;
     color: gray;
+}
+
+.ctr-media-container {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
+.ctr-media-container > * {
+    max-width: 200px;
+    min-width: 10px;
+    flex: 1 1 auto;
 }
